<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/darkCoolGray">

    <TextView
        style="@style/ResultTextview"
        android:id="@+id/output_textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/notSoGray"
            android:id="@+id/ac_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/ac"
            app:layout_constraintEnd_toStartOf="@+id/negate_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/output_textview"
            />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/notSoGray"
            android:id="@+id/negate_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/negate"
            app:layout_constraintEnd_toStartOf="@+id/modulus_button"
            app:layout_constraintStart_toEndOf="@+id/ac_button"
            app:layout_constraintTop_toBottomOf="@id/output_textview"
         />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/notSoGray"
            android:id="@+id/modulus_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/modules"
            app:layout_constraintEnd_toStartOf="@+id/div_button"
            app:layout_constraintStart_toEndOf="@+id/negate_button"
            app:layout_constraintTop_toBottomOf="@+id/output_textview"
         />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolOrange"
            android:id="@+id/div_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/division"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/modulus_button"
            app:layout_constraintTop_toBottomOf="@+id/output_textview" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/seven_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            app:layout_constraintEnd_toStartOf="@+id/eight_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/div_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/eight_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            app:layout_constraintEnd_toStartOf="@+id/nine_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/seven_button"
            app:layout_constraintTop_toBottomOf="@id/div_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/nine_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            app:layout_constraintEnd_toStartOf="@+id/multi_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eight_button"
            app:layout_constraintTop_toBottomOf="@+id/modulus_button" />

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolOrange"
            android:id="@+id/multi_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/multiply"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/nine_button"
            app:layout_constraintTop_toBottomOf="@+id/div_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/four_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            app:layout_constraintEnd_toStartOf="@id/five_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/multi_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/five_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            app:layout_constraintEnd_toStartOf="@id/six_button"
            app:layout_constraintStart_toEndOf="@id/four_button"
            app:layout_constraintTop_toBottomOf="@id/eight_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/six_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            app:layout_constraintEnd_toStartOf="@+id/sub_button"
            app:layout_constraintStart_toEndOf="@id/five_button"
            app:layout_constraintTop_toBottomOf="@id/nine_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolOrange"
            android:id="@+id/sub_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/substract"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/six_button"
            app:layout_constraintTop_toBottomOf="@id/multi_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/one_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/one"
            app:layout_constraintEnd_toStartOf="@id/two_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sub_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/two_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            app:layout_constraintEnd_toStartOf="@id/three_button"
            app:layout_constraintStart_toEndOf="@id/one_button"
            app:layout_constraintTop_toBottomOf="@id/sub_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/three_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            app:layout_constraintEnd_toStartOf="@id/plus_button"
            app:layout_constraintStart_toEndOf="@id/two_button"
            app:layout_constraintTop_toBottomOf="@id/sub_button"/>

        <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolOrange"
            android:id="@+id/plus_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/addition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/three_button"
            app:layout_constraintTop_toBottomOf="@id/sub_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/zero_button"
        style="@style/CalculatorButton"
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:background="@color/coolGray"
        android:text="@string/zero"
        app:layout_constraintEnd_toStartOf="@id/period_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/two_button" />

    <androidx.appcompat.widget.AppCompatButton
            style="@style/CalculatorButton"
            android:background="@color/coolGray"
            android:id="@+id/period_button"
            android:width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/period"
            app:layout_constraintEnd_toStartOf="@id/equals_button"
            app:layout_constraintStart_toEndOf="@id/zero_button"
            app:layout_constraintTop_toBottomOf="@id/three_button"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equals_button"
        style="@style/CalculatorButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/coolOrange"
        android:text="@string/equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/period_button"
        app:layout_constraintTop_toBottomOf="@id/plus_button" />

</androidx.constraintlayout.widget.ConstraintLayout>